force-app/main/default/objects/Activity/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call A</fullName>
            </value>
            <value>
                <fullName>Call B</fullName>
            </value>
            <value>
                <fullName>Call C</fullName>
            </value>
            <value>
                <fullName>Send Letter A</fullName>
            </value>
            <value>
                <fullName>Send Letter B</fullName>
            </value>
            <value>
                <fullName>Send Letter C</fullName>
            </value>
            <value>
                <fullName>Commincate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>